[package]
name = "app"
version = "0.1.0"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.0"        # String utilities from cty library: https://crates.io/crates/cty
cstr_core = "0.1.2"  # String utilities from cstr_core library: https://crates.io/crates/cstr_core
cortex-m = "0.5.8"   # Arm Cortex-M utilities: https://crates.io/crates/cortex-m

[lib]
name = "tosrs"
test = false
bench = false

# Options for `cargo build`
[profile.dev]
panic = "abort"     # Disable stack unwinding on panic

# Options for `cargo build --release`
[profile.release]
panic = "abort"     # Disable stack unwinding on panic
codegen-units = 1   # Better optimizations
debug = true        # Symbols are nice and they don't increase the size on Flash lto = true          # Better optimizations
